--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ES5",
     "strict": true,
     "preserveConstEnums": true,
     "noEmit": false,
